--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,3 +35,38 @@ $fontcolor:#212121;
     @media (max-width: 320px)  { @content; }
   }         
 }
+
+//layout
+.wrap {
+  width:100%;
+  position: relative;
+}
+.header {
+  position: relative;
+  width:100%;
+  height:70px;
+  .header__logo {
+    position: absolute;
+    left:20px;
+    top:10px;
+  }
+  .nav {
+    display: flex;
+    justify-items: center;
+    position: absolute;
+    width: 600px;
+    right:20px;
+    top:10px;    
+    li {}
+  }
+}
+.main__visual {width:100%;
+              img {width:100%;}
+
+}
+.main__content {
+  width:100%;
+  > div {
+    width:100%;
+  }
+}
