--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,7 @@ $fontcolor:#212121;
   width:100%;
   height:70px;
   z-index: 10;
+  transition: all 0.3s;
   .header__logo {
     position: absolute;
     left:20px;
@@ -72,6 +73,18 @@ $fontcolor:#212121;
       > ul {
         display: none;
       }
+    }
+  }
+  &.fixed {
+    .header__logo {
+      @include fontseting(20px,300,#212121);
+    }
+    position: fixed;
+    left:0;
+    top:0;
+    background-color: rgba(255,255,255,0.9);
+    .nav  a {
+      color:#212121;
     }
   }
 }
@@ -112,7 +125,19 @@ $fontcolor:#212121;
         -webkit-box-align: center;
         -ms-flex-align: center;
         -webkit-align-items: center;
-        align-items: center;    
+        align-items: center;   
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          left:0;
+          top:0;
+          bottom:0;
+          z-index: 1;
+          width:100%;
+          height:100%;
+          background-color: rgba(0,0,0,0.5);
+        }         
   }
   img {
     width:100%;
@@ -125,10 +150,25 @@ $fontcolor:#212121;
     top:50%;
     transform: translate(-50%,-50%);
     @include fontseting(20px,300,#fff);
+    z-index: 2;
   }
   @include clearfix();
 }
-
+.pagenation {
+  position: absolute;
+  left:0;
+  bottom:20px;
+  width:100%;
+  text-align: center;
+  z-index: 10;
+  button {
+    width:6px;
+    height:6px;
+    background-color: #fff;
+    border-radius: 50%;
+    margin:0 2px;
+  }
+}
         
 
 
