--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 70px;
   z-index: 10;
+  transition: all 0.3s;
 }
 .header .header__logo {
   position: absolute;
@@ -48,9 +49,17 @@
   font-size: 20px;
   font-weight: 300;
   color: #212121;
+  top: 2px;
 }
 .header.fixed .nav a {
   color: #212121;
+}
+.header .dim {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .main__visual {
