--- a/scss/style.scss
+++ b/scss/style.scss
@@ -243,6 +243,7 @@ $fontcolor:#212121;
           height:200px;
           border-radius: 50%;
           background-color: #fff;
+          line-height:200px;
         }
        }
   }
@@ -251,10 +252,27 @@ $fontcolor:#212121;
     margin: 0 auto;
   }
 }
-.section01 {padding:20px 0;background-color: #38383b;}
-.section02 {padding:20px 0;background-color: #000;}
-.section03 {padding:20px 0;background-color: #fff;}
-.section04 {padding:20px 0;background-color: #38383b;
+.section01 {padding:100px 0;text-align:center;background-color: #38383b;}
+.section02 {padding:100px 0;text-align:center;background-color: #000;}
+.movie.bottom__play {
+  position:absolute;
+  right:0;
+  bottom:0;
+  width:350px;
+  height:300px;
+  z-index:15;
+}  
+
+.section03 {padding:120px 0;
+          background-color: #fff;
+  p {
+    font-size:80px; 
+    line-height:80px;
+    margin:30px 0;
+ }
+}
+
+.section04 {padding:100px 0;background-color: #38383b;
   .mainpage__img--sleft {
     float:left;
   }
@@ -264,19 +282,33 @@ $fontcolor:#212121;
   }
   @include clearfix();
 }
-.section05 {padding:20px 0;background-color: #fff;
-  .photo__list {text-align: center;
-      li {
-        display: inline-block;
-        width:200px;
-        height:300px;
-        overflow: hidden;
-        border-radius: 6px;
-        img {width:100%;}
-      }
+.photo__list {text-align: center;
+  li {
+    display: inline-block;
+    width:300px;
+    height:400px;
+    overflow: hidden;
+    margin:0 20px;
+    border-radius: 6px;
+    img {width:100%;
+      animation:imgpath 5s infinite alternate;
     }
+  }
+}
+.photo__mask {overflow: hidden;}
+@keyframes imgpath {
+    0% {
+        clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+    }
+    100% {
+        clip-path: polygon(0 0, 63% 0, 100% 100%, 25% 100%);
+    }
+  }
+.section05 {padding:100px 0;background-color: #fff;
+ 
 }
 .footer {
-  background-color: #38383b;
+  padding:50px 0;
+  background-color: #212121;
   @include fontseting(20px,300,#fff);
 }
