--- a/scss/style.scss
+++ b/scss/style.scss
@@ -198,12 +198,12 @@ $fontcolor:#212121;
   button {
     width:6px;
     height:6px;
-    background-color: #fff;
+    background:rgba(255,255,255,0.5);
     border-radius: 50%;
     margin:0 2px;
+    &.dot_active {background:rgba(255,255,255,1)};
   }
-}
-        
+}    
 
 
 
@@ -308,7 +308,18 @@ $fontcolor:#212121;
  
 }
 .footer {
-  padding:50px 0;
+  padding:100px 0;
   background-color: #212121;
   @include fontseting(20px,300,#fff);
+  
+}
+
+.sub__content {
+  width: 100%;
+  background-color: #fff;
+  .sub__section01 {
+    max-width: 1240px;
+    margin:0 auto;
+  }
+
 }
