--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,7 @@
   height: 100vh;
   background: url(../img/sub011.jpg) no-repeat;
   background-size: cover;
+  translate: all 0.3s;
 }
 .sub__visual.fixed {
   background-attachment:fixed; 
@@ -371,7 +372,24 @@
   border:1px solid #ddd;
   padding:20px;
   font-size:15px;
-  line-height: 20px;
+  line-height: 25px;
   color:#212121;
+  margin-bottom:50px;
+}
+.sub__section01 h4 {
+  font-size:20px;
+  font-weight:500;
+  color:#212121;
+  margin:30px 0 10px;
+}
+.sub__visual2 {width:100%; height:100vh;position: relative;Object-fit:fill;}
+.sub__visual2 video {
+  position: absolute;
+  Object-fit:fill;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%; 
+  height:100vh;
 }
 /*# sourceMappingURL=css/style.css.map */
